fix: gap sidebar's buttons

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ button.button_width {
     width: 70%;
     display: flex;
     align-items: center;
+    gap: 10px;
   }
 
   button.button_width > span {
